# code_hold

./: .gitignore  README.md
bash/: checkMemory  ffmpegMKVtoMP4  fileManager  find_bad_sys_links  sys_update
c++/: CMakeLists.txt  README.md  test.cpp
c++/excel_tools/: excel_tools.cpp  excel_tools.h
c++/file_tools/: CMakeLists.txt  file_tools.cpp  file_tools.h  test.cpp
c++/system_tools/: system_tools.cpp  system_tools.h
git/: most used commands.txt
go/: README.md  concurrency_example.go  file_tools.go  system_tools.go
go/file_tools/: file_tools.go  go.mod
go/main/: go.mod  main.go
go/multithreading/: go.mod  (+1 more)
javascript/: parser.js
matlab/: case_insensitive_hash_search.m  getValuesFromModelRun.m  modelOptimizer.m  modelOptimizerV2.m  modelRate.m  modelResultsToTxtFile.m  multiCoreModelRun.m  parse_string_for_timestamp.m  parse_string_for_values.m  search_string_for_match.m
python/: CIDR_tools.py  README.md  cli_utils.py  colorText.py  data_utils.py  encryptData.py  file_tools.py  file_utils.py  image_tools.py  loggingTools.py  logging_tools.py  multithreading_tools.py  parse_utils.py  pdfTools.py  pickle_file_tools.py  system_utils.py  tarTools.py  tar_utils.py  time_tools.py  time_utils.py
rust/: README.md
rust/req_get_json_data/: Cargo.toml
rust/req_get_json_data/src/: main.rs
rust/web-api-rust/: Cargo.toml  Rocket.toml
rust/web-api-rust/src/: main.rs  my_api.rs
rust/web-api-rust/src/libs/file_tools/: Cargo.toml
rust/web-api-rust/src/libs/file_tools/src/: lib.rs
rust/xlsx_tools/: Cargo.toml
rust/xlsx_tools/src/: lib.rs
(+17 files in other folders)
