[package]
name = "get_json_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["json", "cookies"]}
tokio = { version = "1", features = ["full"] }
serde = { version= "1", features = ["derive"]}
serde_json = "1"
futures = "0.3"
# NOTES
# final build:cargo build --release
